--- a/CSS/style.CSS
+++ b/CSS/style.CSS
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: 0;
 }
+body{
+    background: #000;
+}
 .navbar{
     display: flex;
     justify-content: center;
@@ -19,7 +22,11 @@
 }
 .navbar a:hover{
     background-color:#fff;
-    color: #333;
-    
-
+    color: #333;   
+}
+h2{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    color: #fff;
 }
