--- a/CSS/style.CSS
+++ b/CSS/style.CSS
@@ -10,13 +10,13 @@ body{
     display: flex;
     justify-content: center;
     background-color: #333;
-    padding: 2px;
+    padding: 4px;
 }
 .navbar a{
     text-decoration: none;
     color: #fff;
     font-weight: bold;
-    padding: 5px 5px;
+    padding: 7px 7px;
     border-radius: 20px;
     transition: background-color 0.1s ease 0.1s ease;
 }
@@ -29,4 +29,42 @@ h2{
     justify-content: center;
     text-align: center;
     color: #fff;
+}
+.img1{
+    width: 350px;
+}
+.img2{
+    width: 290px;
+    height: 233px;
+}
+h1{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    color: #fff;
+}
+p{
+    color: #fff;
+}
+h1{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    color: #fff;
+}
+.img3{
+    width: 300px;
+    height: 250px;
+}
+h4{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    color: #fff;
+}
+.img4{
+    width: 30px;
+    height: 20px;
+    justify-content: center;
+    align-items: center;
 }
