--- a/style.css
+++ b/style.css
@@ -1,27 +1,57 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
-.Navbar{
+
+.Navbar {
     display: flex;
     justify-content: center;
     background-color: #333;
     padding: 2px;
 }
-.Navbar a{
+
+.Navbar a {
     text-decoration: none;
     color: #fff;
     font-weight: bold;
     padding: 5px 5px;
     border-radius: 15px;
-    transition:background-color ease 0.1s ease 0.1s ;
+    transition: background-color ease 0.1s ease 0.1s;
 }
-.Navbar a:hover{
+
+.Navbar a:hover {
     background-color: #ffd700;
     color: #000;
 }
-h1{
+
+h1 {
     display: flex;
     justify-content: center;
     text-align: center;
+}
+
+.box {
+    width: 160px;
+    height: 190px;
+    border-radius: 70px;
+}
+
+h1 {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    font-weight: bold;
+}
+
+p {
+    border: 2px solid black;
+    background-color: #f00;
+    width: 300px;
+    height: 200px;
+    border-radius: 17px;
+    padding: 8px;
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
 }
