--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* {
+*{
     margin: 0;
     padding: 0;
 }
@@ -50,8 +50,8 @@ h1 {
     justify-content: center;
     text-align: center;
     border: 3px solid black;
-    background-color: #f00;
-    color: #fff;
+    background-color: #ffc0cb;
+    color: #000;
     width: 250px;
     height: 150px;
     border-radius: 15px;
@@ -59,7 +59,7 @@ h1 {
     margin: 10px;
 }
 
-.text2{
+.text2 {
     display: flex;
     justify-content: center;
     text-align: center;
@@ -73,13 +73,13 @@ h1 {
     margin: 10px;
 }
 
-.text3{
+.text3 {
     display: flex;
     justify-content: center;
     text-align: center;
     border: 3px solid black;
-    background-color: #f00;
-    color: #fff;
+    background-color: #adff2f;
+    color: #000;
     width: 250px;
     height: 150px;
     border-radius: 15px;
@@ -87,9 +87,10 @@ h1 {
     margin: 10px;
 
 }
-.box{
+
+.box1 {
     display: flex;
     justify-content: center;
     text-align: center;
-   
+
 }
