--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ h1 {
     display: flex;
     justify-content: center;
     text-align: center;
-    font-family: monospace;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .box {
@@ -108,4 +108,15 @@ h1 {
     z-index: 1000;
     border-radius: 50px; 
     /* Ensures it stays above other elements */
+}
+
+.footer{
+    background: #000;
+    color:#fff;
+}
+h1{
+    font-family: 'Courier New', Courier, monospace;
+}
+h2{
+    font-family: 'Courier New', Courier, monospace;
 }
